FIXED 360w resolution, menu wrapping. Now works up to 310w

--- a/_sass/top-bar/top-bar.sass
+++ b/_sass/top-bar/top-bar.sass
@@ -206,9 +206,19 @@ nav
 			.highlight
 				order: -1
 
-			
-			
+@media screen and (max-width: 420px)
+	#secondary-navigation
+		ul > .button a
+			padding: 8px 16px
 
+	#main-navigation
+		ul 
+			margin-left: -10px
+			li a
+				padding: 16px 10px
+				&:after
+					width: calc(100% - 20px)
 
-
-
+@media screen and (max-width: 359px)
+	#top-bar-content-wrapper
+		padding: 0 17px
